--- a/FINAL_PROJECTS.Rmd
+++ b/FINAL_PROJECTS.Rmd
@@ -71,7 +71,7 @@ Your final written paper is expected to be in the style of a **scientific manusc
 ### Introduction
 This is where you introduce the topic and describe why it's important. You can recycle and flesh out the material from your proposal! 
 
-Remember to cite lots of literature here!
+Remember to cite literature here!
 
 ### Methods
 This is where you describe your PVA in enough detail that it *could be replicated* by another wildlife researcher! You can recycle much of your "initial PVA" assignment here.
@@ -89,12 +89,12 @@ Also, you should describe how you addressed your main questions
 ### Results
 This is where you describe and present the relevant outputs from your model. Provide figures and tables to summarize your *relevant* results. 
 
-With PVA it can be difficult to decide what to present and what not to present. Always ask yourself: is it *relevant* to your main questionS??
+With PVA it can be difficult to decide what to present and what not to present. Always ask yourself: is it *relevant* to your main questions?
 
 ### Discussion
 This is where you describe what your results really tell us with respect to your main questions.
 
-Also, you should:
+Also, in your discussion you should:
 
 - Describe any new questions that came up in the process of building and running your PVA
 - Describe any potential flaws with your PVA and how you might improve this in the future
@@ -109,7 +109,7 @@ Your group presentation should be in the style of an oral presentation at a conf
 
 Presentations will take place during our final two lab periods. 
 
-You will have 12 minutes to give your presentations, with at least 3 additional minutes for presenations.  
+You will have 15 minutes to give your presentations, with at least 3 additional minutes for questions.  
 
 We will hand out a simple peer-review form so you can give feedback to your peers. 
 
@@ -125,11 +125,11 @@ The way it will work is as follows:
 
 2. Before lab on April 26, please throroughly read the manuscript you have been assigned, and make comments, paying particular attention to the [grading rubric](WrittenProject_rubric.docx). 
 
-3. During the lab period, you will first get together with the other students that were also assigned to review the same manuscript. You will have 25 minutes to compare notes and prepare a written "peer review" of the manuscript that highlights both the strengths and the weaknesses. Please make your comments as specific and constructive as possible. The goal is to give your classmates feedback that will be useful to them as they prepare their final drafts! *Please hand in your peer-review to the group that wrote the draft AND your instuctor/TA*
+3. During the lab period, you will first get together with the other students that were also assigned to review the same manuscript. You will have 30 minutes to compare notes and prepare a written "peer review" of the manuscript that highlights both the strengths and the weaknesses. Please make your comments as specific and constructive as possible. The goal is to give your classmates feedback that will be useful to them as they prepare their final drafts! *Please hand in your peer-review to the group that wrote the draft AND your instuctor/TA*
 
 4. After that, we will break up into new groups. One representative from each peer-review group will meet with the project group that wrote the draft manuscript, to give the feedback in person (and on paper).
 
-5. For the remaining time in lab, you will have a chance to work on your PVA write-ups and presentations!
+5. For any remaining time in lab, you will have a chance to work on yourwrite-ups and presentations!
 
 ### In-class peer review: manuscript drafts
 
@@ -155,7 +155,7 @@ During the final project presentations, please provide feedback to your classmat
 ### Tips for a great presentation!
 
 Here are some general notes about how to prepare and deliver a great presentation:   
-- For all slides: *Less words, more pictures*! Wordy slides often cause people to stop paying attention! All of you are working with charismatic species (cheatgrass may be questionable on that front!), so you shouldn't have trouble finding nice pictures that capture people's attention. As for words, 3-5 bullet points maximum! Complete sentences are NOT needed in a presentation. Use a large, sans-serif font to improve readability.  
+- For all slides: *Less words, more pictures*! Wordy slides often cause people to stop paying attention! All of you are working with charismatic species, so you shouldn't have trouble finding nice pictures that capture people's attention. As for words, 3-5 bullet points maximum! Complete sentences are NOT needed in a presentation. Use a large, sans-serif font to improve readability.  
 
 Note: make sure you give proper credit for all pictures (e.g., what website did it come from?)
 
@@ -198,11 +198,11 @@ Note: please don't use fancy backgrounds- keep your slides as clean as possible.
 
 #### Discussion
 
-- Just one slide discussing shortcomings of your project and how you would improve your model and design if you had additional time. 
-
 - Summarize your key findings- what did you learn? 
 
 - Management implications- how could wildlife managers act upon your findings??
+
+- Just one slide discussing shortcomings of your project and how you would improve your model and design if you had additional time. 
 
 - Describe what you or other researchers could do to expand upon your findings- what are the next steps? 
 
@@ -210,9 +210,6 @@ Note: please don't use fancy backgrounds- keep your slides as clean as possible.
 #### Acknoweldgements   
 
 - Your final slide should acknowledge people who helped you with your project but who are not listed as a co-author.
-
-
-
 
 
 
