--- a/LECTURE18.Rmd
+++ b/LECTURE18.Rmd
@@ -16,7 +16,7 @@ knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
 
 ### Upcoming final exam
 
-**when and where** The final exam is coming up on **May 11** (9:50am in FA 301). You will have the whole two hour period to take the exam. The exam will take place in our regular classroom, unless you make prior arrangements. 
+**when and where** The final exam is coming up on **May 14** (9:50am in our regular classroom). You will have the whole two hour period to take the exam. The exam will take place in our regular classroom, unless you make prior arrangements. 
 
 **what** The exam will cover all material covered in lectures and lab.
 
@@ -53,7 +53,7 @@ knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
 #### Extra credit
 
 - Will accept up to four extra credit write-ups. 
-- Due when final papers are due (May 16).
+- Due when final papers are due (May 15).
 
 #### Office hours/Study session
 
